# python_doe_kspub

./: .gitignore  main.py  pyproject.toml  ruff.toml
output/: acquisition_function_prediction_gpr_one_kernel_PTR.csv  ad_index_prediction_knn.csv  ad_index_prediction_ocsvm.csv  autoscaled_dataset.csv  estimated_y_in_cv_in_detail_gpr_kernels.csv  estimated_y_in_cv_in_detail_gpr_one_kernel.csv  estimated_y_in_cv_in_detail_ols.csv  estimated_y_in_cv_in_detail_ols_linear.csv  estimated_y_in_cv_in_detail_ols_nonlinear.csv  estimated_y_in_cv_in_detail_svr_gaussian.csv  estimated_y_in_cv_in_detail_svr_linear.csv  estimated_y_in_detail_gpr_kernels.csv  estimated_y_in_detail_gpr_one_kernel.csv  estimated_y_in_detail_ols.csv  estimated_y_in_detail_ols_linear.csv  estimated_y_in_detail_ols_nonlinear.csv  estimated_y_in_detail_svr_gaussian.csv  estimated_y_in_detail_svr_linear.csv  estimated_y_ols.csv  estimated_y_prediction_considering_ad_gpr_kernels_knn.csv  estimated_y_prediction_considering_ad_gpr_kernels_ocsvm.csv  estimated_y_prediction_considering_ad_gpr_one_kernel_knn.csv  estimated_y_prediction_considering_ad_gpr_one_kernel_ocsvm.csv  estimated_y_prediction_considering_ad_ols_linear_ocsvm.csv  estimated_y_prediction_considering_ad_ols_nonlinear_ocsvm.csv  estimated_y_prediction_considering_ad_svr_gaussian_ocsvm.csv  estimated_y_prediction_considering_ad_svr_linear_ocsvm.csv  estimated_y_prediction_ensemble_svr_gaussian.csv  estimated_y_prediction_gpr_kernels.csv  estimated_y_prediction_gpr_kernels_std.csv  estimated_y_prediction_gpr_one_kernel.csv  (+54 more)
script/: chap3.ipynb  (+5 more)
(+232 files in other folders)
