[project]
name = "python-doe-kspub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "polars[rtcompat]>=1.35.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyarrow>=21.0.0",
    "ruff>=0.14.8",
]
