[project]
name = "python-doe-kspub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars[rtcompat]>=1.37.1",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyarrow>=22.0.0",
    "ruff>=0.14.11",
]
